implememtation_admin_rules
